# lab06

./: CMakeLists.txt
.github/workflows/: binary.yml  zip.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: CMakeLists.txt
